--- a/README
+++ b/README
@@ -7,3 +7,5 @@ Instructions:
     2. Fill out info in authentication_empty.py and change name to 
        authentication.py
     3. Run visit_csv2git.py
+
+wait.. no.. there's more now. I'll do this later. 
